<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.DetailTvShow"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/iv_tvshows"
            android:layout_width="180dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/poster"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041"
            tools:srcCompat="@mipmap/ic_launcher_round"
            tools:visibility="visible" />


        <TextView
            android:id="@+id/tv_tvshows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/tv_shows_name"
            android:textSize="@dimen/twentyFour_sp"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/iv_tvshows"
            app:layout_constraintTop_toTopOf="@+id/iv_tvshows"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_release_date_tv_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/release_date"
            android:textSize="@dimen/twelve_sp"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/iv_tvshows"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating_tv_shows"
            tools:visibility="visible" />

        <TextView

            android:id="@+id/tv_rating_tv_shows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/sixteen_sp"
            android:visibility="invisible"
            app:drawableStartCompat="@drawable/ic_star"
            app:layout_constraintStart_toEndOf="@+id/iv_tvshows"
            app:layout_constraintTop_toBottomOf="@+id/tv_tvshows"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/overview"
            android:textSize="@dimen/sixteen_sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/iv_tvshows"
            app:layout_constraintTop_toBottomOf="@+id/iv_tvshows"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/material_orange_400"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ProgressBar>

        <TextView
            android:id="@+id/tv_des_tvshows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tv_des"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_synopsis"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/img_favorite_tv_show"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/img_favorite"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/tv_release_date_tv_show"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_tv_show"
            tools:visibility="visible">

        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
